--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,7 @@ $r_desk_1120: 1120px;
 $r_desk_hd: 1200px;
 $r_desk_1280: 1280px;
 $r_desk_1350: 1350px;
+$r_desk_full_1750: 1750px;
 
 html {
     font-size: 10px;
@@ -33,6 +34,7 @@ body {
     background-size: contain;
     background-repeat: no-repeat;
     position: relative;
+   /* overflow: hidden;  Поставим позже чтобы убрать горизонтальный скрол*/
 }
 
 .header {
@@ -455,6 +457,11 @@ body {
         right: 30px;
         width: 18rem;
         z-index: -1;
+        @media (max-width: $r_desk_full_1750) {
+            width: 9.8rem;
+            top: 120px;
+            right: -50px;
+        }
     }
 
     &__cucumber {
@@ -471,12 +478,16 @@ body {
         left: 69px;
         width: 8.6rem;
         z-index: -1;
+        @media (max-width: $r_desk_full_1750) {
+            display: none;
+        }
     }
+    
 
     &__olives {
         position: absolute;
         top: 796px;
-        left: 29px;
+        left: 0;
         width: 10.5rem;
         z-index: -1;
     }
@@ -580,6 +591,12 @@ body {
 .slider {
     overflow: hidden;
     padding-top: 9.4rem;
+    @media (max-width: $r_tab) {
+        max-width: 450px;
+        margin: 0 auto;
+        padding-top: 5.4rem;
+        padding-bottom: 6rem;
+    }
 }
 
 .swiper {
@@ -601,7 +618,11 @@ body {
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
+            background-size: contain;
             padding: 4rem 3.7rem;
+            @media (max-width: $r_desk_hd) {
+                height: 400px;
+            }
 
             &:hover {
 
@@ -727,10 +748,16 @@ body {
 
     &-pagination {
         display: none;
+        @media (max-width: $r_tab) {
+            display: block;
+        }
     }
 
     &-button-next, &-button-prev {
         top: -60px;
+        @media (max-width: $r_tab) {
+            display: none;
+        }
 
         &:hover {
 
@@ -753,6 +780,23 @@ body {
         left: initial;
         right: 72px;
     }
+}
+
+.swiper-horizontal>.swiper-pagination-bullets {
+    bottom: -50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.swiper-pagination-bullet-active {
+    background: $orange;
+    border: 1px solid $orange;
+}
+
+.swiper-pagination-bullet{
+    width: 8px;
+    height: 8px;
 }
 
 .counter {
@@ -813,6 +857,17 @@ body {
     &__text {
         margin-left: 11.5rem;
         flex-basis: 615px;
+        @media (max-width: $r_desk_1280) {
+            margin-left: 8rem;
+        }
+        @media (max-width: $r_desk_1120) {
+            margin-left: 4rem;
+        }
+        @media (max-width: $r_tab) {
+            /*max-width: 100%;*/
+            margin-left: 0;
+            /*margin-top: 3rem;*/
+        }
     }
 
     &__list {
